--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -34,7 +34,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="user : ${users}">
+				<tr th:each="user : ${users}" th:attr="id=${'userRow_' + user.id}">
 					<th scope="row" th:text="${user.id}">1</th>
 					<td th:text="${user.name}">Mark</td>
 					<td th:text="${user.email}">Otto@gmail.oc</td>
@@ -43,7 +43,8 @@
 						<div style="margin: 0 auto">
 							<button class="btn btn-primary">Query</button>
 							<button class="btn btn-info">Update</button>
-							<button class="btn btn-danger">Delete</button>
+							<button type="button" class="btn btn-danger deleteUserButton"
+								th:attr="data-user-id=${user.id}">Delete</button>
 						</div>
 					</td>
 				</tr>
@@ -57,5 +58,6 @@
 	<script src="/js/jquery-3.2.1.min.js"></script>
 	<script src="/bootstrap4/assets/js/vendor/popper.min.js"></script>
 	<script src="/bootstrap4/dist/js/bootstrap.min.js"></script>
+	<script src="/js/app.js"></script>
 </body>
 </html>
