--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -57,7 +57,7 @@
 	</div>
 
 	<!-- Bootstrap core JavaScript -->
-	<script src="/static/js/jquery-3.2.1.min.js"></script>
+	<script src="/static/js/jquery/jquery-3.2.1.min.js"></script>
 	<script src="/static/bootstrap4/assets/js/vendor/popper.min.js"></script>
 	<script src="/static/bootstrap4/dist/js/bootstrap.min.js"></script>
 	<script src="/static/js/app.js"></script>
