--- a/src/main/webapp/WEB-INF/templates/queryUser.html
+++ b/src/main/webapp/WEB-INF/templates/queryUser.html
@@ -68,7 +68,7 @@
 	</div>
 
 	<!-- Bootstrap core JavaScript -->
-	<script src="/static/js/jquery-3.2.1.min.js"></script>
+	<script src="/static/js/jquery/jquery-3.2.1.min.js"></script>
 	<script src="/static/bootstrap4/assets/js/vendor/popper.min.js"></script>
 	<script src="/static/bootstrap4/dist/js/bootstrap.min.js"></script>
 	<script src="/static/js/queryUser.js"></script>
