--- a/src/main/webapp/WEB-INF/templates/updateUser.html
+++ b/src/main/webapp/WEB-INF/templates/updateUser.html
@@ -76,29 +76,34 @@
 			</div>
 			<div class="col-xs-10">
 				<label class="col-sm-2">Frameworks</label>
-				<div class="col-sm-4 input-group"
-					th:each="framework, stat : *{frameworks}">
-					<input class="form-control" type="text" th:value="${framework}"
-						th:attr="name=${'frameworks[' + stat.index + ']'}" /> <span
-						class="input-group-btn">
-						<button type="button" class="btn btn-default">
-							<span class="glyphicon glyphicon-remove"></span> Remove
-						</button>
-					</span>
+				<div id="frameworksContainer">
+					<div class="col-sm-4 input-group"
+						th:each="framework, stat : *{frameworks}"
+						th:attr="id=${'framework_' + stat.index}">
+						<input class="form-control" type="text" th:value="${framework}"
+							th:attr="name=${'frameworks[' + stat.index + ']'}" /> <span
+							class="input-group-btn">
+							<button type="button"
+								class="btn btn-default removeFrameworkButton"
+								th:attr="data-framework-index=${stat.index}">
+								<span class="glyphicon glyphicon-remove"></span> Remove
+							</button>
+						</span>
+					</div>
 				</div>
 				<br />
 				<div class="col-sm-6" style="text-align: center">
-					<button type="button" class="btn btn-info">Add framework</button>
+					<button type="button" class="btn btn-info addFrameworkButton">Add
+						framework</button>
 				</div>
 				<br />
 			</div>
 			<div class="form-group">
 				<div class="col-sm-6" style="text-align: center">
-					<button type="button" class="btn btn-primary">Update</button>
+					<button type="button" class="btn btn-primary updateUserButton">Update</button>
 				</div>
 			</div>
 		</form>
-
 
 		<div th:insert="fragments/footer.html :: footer"></div>
 	</div>
@@ -107,6 +112,6 @@
 	<script src="/static/js/jquery/jquery-3.2.1.min.js"></script>
 	<script src="/static/bootstrap4/assets/js/vendor/popper.min.js"></script>
 	<script src="/static/bootstrap4/dist/js/bootstrap.min.js"></script>
-	<script src="/static/js/queryUser.js"></script>
+	<script src="/static/js/updateUser.js"></script>
 </body>
 </html>
