--- a/src/main/webapp/WEB-INF/templates/fragments/header.html
+++ b/src/main/webapp/WEB-INF/templates/fragments/header.html
@@ -1,4 +1,5 @@
 <div th:fragment="header">
+	<script src="/static/js/jquery/jquery-3.2.1.min.js"></script>
 	<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 		<a class="navbar-brand" href="/welcome">User management</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -12,9 +13,10 @@
 			<ul class="navbar-nav mr-auto">
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Add
-					user</button>
+				<button class="btn btn-outline-success my-2 my-sm-0 addUserButton"
+					type="button">Add user</button>
 			</form>
 		</div>
 	</nav>
+	<script src="/static/js/addUser.js"></script>
 </div>
