--- a/src/main/webapp/WEB-INF/templates/addUser.html
+++ b/src/main/webapp/WEB-INF/templates/addUser.html
@@ -23,7 +23,7 @@
 			<h1>Add user</h1>
 
 		</div>
-		<form class="form-horizontal">
+		<form class="form-horizontal" action="/addUser" method="post">
 			<div class="form-group">
 				<label class="col-sm-2">Name</label>
 				<div class="col-sm-6">
@@ -97,7 +97,7 @@
 			</div>
 			<div class="form-group">
 				<div class="col-sm-6" style="text-align: center">
-					<button type="button" class="btn btn-primary updateUserButton">Add user</button>
+					<button type="submit" class="btn btn-primary">Add user</button>
 				</div>
 			</div>
 		</form>
