Now on the query user page it is possible to view the user's CV.

--- a/src/main/webapp/WEB-INF/templates/queryUser.html
+++ b/src/main/webapp/WEB-INF/templates/queryUser.html
@@ -54,6 +54,10 @@
 					<td th:text="${user.frameworks}">Spring MVC</td>
 				</tr>
 				<tr>
+					<th scope="row">CV file</th>
+					<td><a th:href="@{'/resources/files/cv/' + ${user.cvFilePath}}">View CV file</a></td>
+				</tr>
+				<tr>
 					<td colspan="2">
 						<div style="text-align: center">
 							<button type="button" class="btn btn-primary backToUsersButton">Back
