--- a/src/main/webapp/WEB-INF/templates/updateUser.html
+++ b/src/main/webapp/WEB-INF/templates/updateUser.html
@@ -23,7 +23,9 @@
 			<h1>Query user</h1>
 
 		</div>
-		<form class="form-horizontal" th:object="${user}">
+		<form class="form-horizontal" th:object="${user}" method="post" enctype="multipart/form-data">
+			<input type="hidden" name="id" th:value="${user.id}" />
+		
 			<div class="form-group">
 				<label class="col-sm-2">Name</label>
 				<div class="col-sm-6">
@@ -69,7 +71,7 @@
 			<div class="form-group">
 				<label class="col-sm-2">Gender</label>
 				<div class="col-sm-3">
-					<select name="sex" id="sex" class="form-control">
+					<select name="gender" id="gender" class="form-control">
 						<option th:each="gender : ${genders}" th:text="${gender}">Female</option>
 					</select>
 				</div>
@@ -100,7 +102,7 @@
 			</div>
 			<div class="form-group">
 				<div class="col-sm-6" style="text-align: center">
-					<button type="button" class="btn btn-primary updateUserButton">Update</button>
+					<button type="submit" class="btn btn-primary">Update</button>
 				</div>
 			</div>
 		</form>
