Implemented a Part validator which rejects empty files.

--- a/src/main/webapp/WEB-INF/templates/addUser.html
+++ b/src/main/webapp/WEB-INF/templates/addUser.html
@@ -23,7 +23,7 @@
 			<h1>Add user</h1>
 
 		</div>
-		<form class="form-horizontal" action="/addUser" method="post" enctype="multipart/form-data">
+		<form class="form-horizontal" th:action="@{/addUser}" method="post" enctype="multipart/form-data">
 			<div class="form-group">
 				<label class="col-sm-2">Name</label>
 				<div class="col-sm-6">
