--- a/src/main/webapp/WEB-INF/templates/updateUser.html
+++ b/src/main/webapp/WEB-INF/templates/updateUser.html
@@ -87,6 +87,20 @@
 				</div>
 			</div>
 			<div class="form-group">
+				<label class="col-sm-2">Birthdate</label>
+				<div class="col-sm-6" id="sandbox-container">
+					<div class="input-group date">
+						<input type="text" class="form-control" name="birthDate"
+							id="birthDate" required=""
+							data-parsley-errors-container="#birthDateErrors"
+							th:value="${#dates.format(user.birthDate, 'MM/dd/yyyy')}"><span
+							class="input-group-addon"><i
+							class="glyphicon glyphicon-th"></i></span> <br />
+					</div>
+					<div id="birthDateErrors"></div>
+				</div>
+			</div>
+			<div class="form-group">
 				<label class="col-sm-2">Gender</label>
 				<div class="col-sm-3">
 					<select name="gender" id="gender" class="form-control">
@@ -109,8 +123,7 @@
 								th:attr="data-framework-index=${stat.index}">
 								<span class="glyphicon glyphicon-remove"></span> Remove
 							</button>
-						</span>
-						<br/>
+						</span> <br />
 					</div>
 					<div id="framework_0_Errors"></div>
 				</div>
@@ -135,9 +148,16 @@
 	<script src="/static/js/jquery/jquery-3.2.1.min.js"></script>
 	<script src="/static/bootstrap4/assets/js/vendor/popper.min.js"></script>
 	<script src="/static/bootstrap4/dist/js/bootstrap.min.js"></script>
+
 	<script src="/static/js/updateUser.js"></script>
-	
-		<!-- Parsley js validation -->
+
+	<!-- Datepicker -->
+	<script src="/static/datepicker/bootstrap-datepicker.min.js"></script>
+	<script>
+		$('#sandbox-container .input-group.date').datepicker({defaultDate: '10/04/1994'});
+	</script>
+
+	<!-- Parsley js validation -->
 	<script src="/static/js/parsley/parsley.js"></script>
 	<script type="text/javascript">
 		$(function() {
@@ -150,6 +170,6 @@
 			});
 		});
 	</script>
-	
+
 </body>
 </html>
